<resources>
    <string name="app_name">Мария Миронова</string>
    <string name="e_mail">E-mail</string>
    <string name="about">О себе</string>
    <string name="phone">Мобильный</string>
    <string name="project">Проектов</string>
    <string name="code_lines">Написано строк кода</string>
    <string name="rank">Рейтинг</string>
    <string name="vk">Профиль в VK</string>
    <string name="repository">Репозиторий</string>
    <string name="user_profile.placeholder.image">Изменить фотографию пользователя</string>
    <string name="user_profile.dialog.gallery">Получить из галереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.choose.message">выбор фото</string>
    <string name="rank_5">5</string>
    <string name="number_of_codelines">10000</string>
    <string name="num_of_projects">3</string>
    <string name="user_phone_number">+7 (916) 693-36-08</string>
    <string name="user_email">masha.a.mironova@ya.ru</string>
    <string name="user_vk">vk.com/id1148811</string>
    <string name="user_git">github.com/MariaMironova</string>
    <string name="user_about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="auth_text">ВОЙТИ</string>
    <string name="fogot_password_text">Забыли пароль?</string>
    <string name="password">Пароль</string>
    <string name="permission_request">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="allow">Разрешить</string>
    <string name="auth.e_mail">E-mail</string>
    <string name="auth.login">ВОЙТИ</string>
    <string name="auth.remember">Забыли пароль?</string>
    <string name="auth.incorrect">неверный логин или пароль</string>
    <string name="forgot_uri">http://devintensive.softdesign-apps.ru/forgotpass</string>
    <string name="ups">Упс.. Что-то пошло не так..</string>
    <string name="auth.network_not_available">Сеть в данный момент не доступна, попробуйте позже</string>
    <string name="button.view">Просмотр</string>
    <string name="search.title">Поиск пользователя</string>
    <string name="search.input_name">Введите имя вользователя</string>
    <string name="menu.profile">Мой профиль</string>
    <string name="menu.team">Команда</string>
    <string name="menu.exit">Выход</string>
    <string name="error_load_users">Список пользователей не может быть получен</string>
    `
</resources>
