<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/grey"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rank_et"
                    style="@style/bar_number"
                    android:text="@string/rank_5"/>
                <TextView
                    style="@style/bar_text"
                    android:text="@string/rank"/>
            </LinearLayout>

            <View style="@style/vertical_line"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/code_lines_et"
                    style="@style/bar_number"
                    android:text="@string/number_of_codelines"/>

                <TextView
                    style="@style/bar_text"
                    android:text="@string/code_lines"/>
            </LinearLayout>

            <View style="@style/vertical_line"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projects_et"
                    style="@style/bar_number"
                    android:text="@string/num_of_projects"/>

                <TextView
                    style="@style/bar_text"
                    android:text="@string/project"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                style="@style/block">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"/>

                <LinearLayout
                    style="@style/field">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/phone_et"
                            style="@style/text"
                            android:inputType="phone"
                            android:hint="@string/phone"
                            android:text="@string/user_phone_number"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/call_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>
            </LinearLayout>

            <View style="@style/line"/>

            <LinearLayout
                style="@style/block">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"/>

                <LinearLayout
                    style="@style/field">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/email_et"
                            style="@style/text"
                            android:inputType="textEmailAddress"
                            android:hint="@string/e_mail"
                            android:text="@string/user_email"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/email_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>
            </LinearLayout>

            <View style="@style/line"/>


            <LinearLayout
                style="@style/block">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_vk_24dp"/>

                <LinearLayout
                    style="@style/field">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/vk_et"
                            style="@style/text"
                            android:inputType="textUri"
                            android:hint="@string/vk"
                            android:text="@string/user_vk"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/vk_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>
            <View style="@style/line"/>

            <LinearLayout
                style="@style/block">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_github_circle_24dp"/>

                <LinearLayout
                    style="@style/field">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/git_et"
                            style="@style/text"
                            android:inputType="textUri"
                            android:hint="@string/repository"
                            android:text="@string/user_git"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/git_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View style="@style/line"/>

            <LinearLayout
                style="@style/block">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_about_24dp"/>

                <LinearLayout
                    style="@style/field">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center">
                        <EditText
                            android:id="@+id/about_et"
                            style="@style/text"
                            android:inputType="textMultiLine"
                            android:hint="@string/about"
                            android:text="@string/user_about"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>