<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
<android.support.design.widget.CoordinatorLayout

    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            
            <ImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_img_size"
                android:scaleType="centerCrop"
                android:src="@drawable/dandelion_photo"
                android:fitsSystemWindows="true"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/AppTheme.PopupOverlay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:titleTextColor="@color/white"
            app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

<android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:background="@color/grey"
     android:orientation="horizontal">

     <LinearLayout
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical">

         <TextView
              android:id="@+id/rank_et"
              style="@style/bar_number"
              android:text="5"/>
              <TextView
                 style="@style/bar_text"
                 android:text="@string/rank"/>
         </LinearLayout>

            <View style="@style/vertical_line"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/code_lines_et"
                    style="@style/bar_number"
                    android:text="10000"/>

                <TextView
                    style="@style/bar_text"
                    android:text="@string/code_lines"/>
            </LinearLayout>

            <View style="@style/vertical_line"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projects_et"
                    style="@style/bar_number"
                    android:text="3"/>

                <TextView
                    style="@style/bar_text"
                    android:text="@string/project"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        style="@style/block">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_black_24dp"/>

        <LinearLayout
            style="@style/field">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phone_et"
                    style="@style/text"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:text="+7 (916) 603-38-19"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/call_img"
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
    </LinearLayout>

    <View style="@style/line"/>

    <LinearLayout
        style="@style/block">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_black_24dp"/>

        <LinearLayout
            style="@style/field">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email_et"
                    style="@style/text"
                    android:inputType="textEmailAddress"
                    android:hint="@string/e_mail"
                    android:text="masha.a.mironova@ya.ru"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"/>
    </LinearLayout>

    <View style="@style/line"/>


            <LinearLayout
                style="@style/block">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_vk_24dp"/>

                <LinearLayout
                    style="@style/field">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/vk_et"
                            style="@style/text"
                            android:inputType="textUri"
                            android:hint="@string/vk"
                            android:text="vk.com/id1148811"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>
        <View style="@style/line"/>

            <LinearLayout
                style="@style/block">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_github_circle_24dp"/>

                <LinearLayout
                    style="@style/field">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/git_et"
                            style="@style/text"
                            android:inputType="textUri"
                            android:hint="@string/repository"
                            android:text="github.com/MariaMironova"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View style="@style/line"/>

            <LinearLayout
                style="@style/block">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_about_24dp"/>

                <LinearLayout
                    style="@style/field">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center">
                        <EditText
                            android:id="@+id/about_et"
                            style="@style/text"
                            android:inputType="textMultiLine"
                            android:hint="@string/about"
                             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
      </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_24dp"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="bottom|right"
        android:layout_marginRight="@dimen/fab_right_space"/>
  </android.support.design.widget.CoordinatorLayout>
  <android.support.design.widget.NavigationView
      android:id="@+id/navigation_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="left"
      app:headerLayout="@layout/drawer_header"
      app:menu="@menu/drawer_menu"></android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>

